frontend/test/should_fail/array_removeIf_input_scalar.grg
test array_removeIf(ref a:array<double>) {
	if {
		a.removeIf{value:int -> value != 42}.empty();
	}	
}

